# vchar64

./: .appveyor.yml  .clang-format  .gitignore  .pre-commit-config.yaml  .travis.yml  AGENTS.md  AUTHORS  CHANGELOG  CMakeLists.txt  CONTRIBUTING.md  LATEST_VERSION.txt  LICENSE_VChar64.txt  LICENSE_fonts.md  LICENSE_fonts.txt  Letter.qml  README.md  appveyor.yml  build_and_run.sh  c64-editor.pro  c64editor.pro  index.html  moe.retro.vchar64.desktop  params.json  vchar64.pro
.github/workflows/: ci.yml  release.yml
build-editor-Desktop_Qt_5_4_0_clang_64bit-Debug/: Makefile  moc_bigchar.cpp  moc_glwidget.cpp  moc_mainwindow.cpp  moc_widget.cpp  ui_mainwindow.h
build-editor-Desktop_Qt_5_4_0_clang_64bit-Debug/editor.app/Contents/: Info.plist
build-editor-Desktop_Qt_5_4_0_clang_64bit-Debug/editor.app/Contents/MacOS/: editor
editor/: bigchar.cpp  bigchar.h  editor.pro  mainwindow.ui
examples/: astra_2x2.vchar64proj  boulderdash_1x2.vchar64proj  broadway_2x2.vchar64proj  caren_1x2.vchar64proj  cuneiform_2x2.vchar64proj  doppel_2x2.vchar64proj  font_boulderdash_1x2.vchar64proj  font_hero_atari_1x1.vchar64proj  font_ianmic02_2x2.vchar64proj  font_rambo_2x2.vchar64proj  font_reset04_2x3.vchar64proj  font_reset07_2x2.vchar64proj  font_subchrist_chrome _2x2.vchar64proj  font_unknown_2x2.vchar64proj  game_commando_l1.vchar64proj  gothic_bakery_3x3.vchar64proj  ian_mic_1_2x2.vchar64proj  ian_mic_2_2x2.vchar64proj  ianmic02_2x2.vchar64proj  rambo_2x2.vchar64proj  reset04_2x3.vchar64proj  reset06_3x3.vchar64proj  reset07_2x2.vchar64proj  yie_are_kungfu_2x1.vchar64proj
examples/CharPad_Examples/Armalyte - 5x5/: Readme.txt
examples/c64_loader/: Makefile  loader.prg  logo-attribs.s  logo-charset.s  logo-colors.s  logo-map.s  main.s  pvm_logo.vchar64proj
res/: logo.xcf  resources.qrc  vchar64-icon-mac.icns
server/: Makefile  Makefile.c128.defines  Makefile.c64.defines  Makefile.vchar64d  README.md  contiki.cfg  vchar64d-c128.d64  vchar64d-c128.d71  vchar64d-c64.d64  vchar64d.c
server/c64/: Makefile  contiki.cfg  vchar64-server.c  vchar64d.c
src/: BigChar.qml  CMBLabel.qml  CMakeLists.txt  CharSet.qml  CharSetView.qml  Letter.qml  MainForm.ui.qml  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  autoupdater.cpp  autoupdater.h  bigchar.cpp  bigchar.h  bigcharwidget.cpp  bigcharwidget.h  c64-chargen.json  charsetview.cpp  charsetview.h  charsetwidget.cpp  charsetwidget.h  colorpalette.cpp  colorpalette.h  colorrect.cpp  colorrect.h  colorrectwidget.cpp  colorrectwidget.h  commands.cpp  commands.h  constants.cpp  constants.h  exportdialog.cpp  exportdialog.h  exportdialog.ui  exportimagedialog.cpp  exportimagedialog.h  exportimagedialog.ui  fileutils.cpp  fileutils.h  import.cpp  (+82 more)
src/res/: Info.plist  vchar64.rc
tests/: Commando L1_v4.ctm  Subchrist - Demo - Gothic Bakery - 3x3.ctm  Subchrist - Demo - Gothic Bakery - 3x3_v4.ctm  Subchrist - Demo - Parklife - 4x4_v5.ctm  Subchrist - Game - Cactus - 4x4_v4.ctm  Uridium L01 Zinc_v4.ctm  athena-tob.koa  bcs_quest_for_tires.koa  bluemax.vsf  boulder_dash.vsf  creature.koa  grand_prix_simulator.koa  metal_warrior.kla  pvm_logo_blue.ctm  pvm_logo_blue.koa  pvm_logo_gray.koa  pvm_logo_green.koa  pvm_logo_pink.koa  rambo-title.koa  rambo.vsf  seuck_game.vsf  super-mario-vice3.6.vsf  the-muni-race.kla  the_race_128_vice3.vsf  world_cup_carnival.vsf
tests/unit_tests/: CMakeLists.txt
tests/unit_tests/src/: mock_state.h  state.h  stateexport_stub.cpp  tst_stateexport.cpp  tst_stateimport.cpp
tools/: cmake_run_tests.sh  vchar64proj_gen.py
translations/: CMakeLists.txt  translations.pro  vchar64_es.qm  vchar64_es.ts
